# stiva

./: docker-compose.yml  stack.yaml  stiva.cabal
src/: Bot.hs  Conversation.hs  Epop.hs  Main.hs  Store.hs  Types.hs  Witai.hs
src/API/: Swagger.hs  Web.hs
