name:                stiva
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/madjar/stiva#readme
license:             BSD3
license-file:        LICENSE
author:              Georges Dubus
maintainer:          georges.dubus@compiletoi.net
copyright:           2015 Georges Dubus
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable stiva
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Epop
                     , Types
                     , API.Web
                     , API.Swagger
                     , Bot
                     , Conversation
                     , Witai
                     , Store
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings
                       TypeFamilies
                       RecordWildCards
  build-depends:       base >= 4.7 && < 5
                     , servant
                     --, servant-server
                     , servant-swagger
                     , swagger2
                     , wai
                     , wai-cors
                     , wai-extra
                     , warp
                     , webdriver >= 0.8
                     , classy-prelude >= 0.12
                     , process >= 1.2
                     , attoparsec >= 0.13
                     , time >= 1.5
                     , extra >= 1.4
                     , aeson >= 0.9
                     , aeson-pretty
                     , lens-aeson
                     , lens
                     , slack-api
                     , wreq
                     , either
                     , errors
                     , acid-state
                     , safecopy
                     , mtl
                     , monad-logger
  ghc-options:       -threaded -rtsopts -with-rtsopts=-N
